working commit: AEAC scan endpoint
